--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	},
 	"dependencies": {
 		"@element-plus/icons-vue": "*",
+		"@vueuse/core": "^12.0.0",
 		"@wangeditor/editor": "^5.1.23",
 		"@wangeditor/editor-for-vue": "^5.1.12",
 		"axios": "^1.6.3",
@@ -19,6 +20,7 @@
 		"md-editor-v3": "^2.11.2",
 		"nprogress": "^0.2.0",
 		"pinia": "^2.1.7",
+		"schart.js": "^3.0.4",
 		"vue": "^3.4.5",
 		"vue-cropper": "1.1.1",
 		"vue-echarts": "^6.6.9",
@@ -29,6 +31,7 @@
 	"devDependencies": {
 		"@vitejs/plugin-vue": "^3.0.0",
 		"@vue/compiler-sfc": "^3.1.2",
+		"sass": "^1.81.1",
 		"typescript": "^4.6.4",
 		"unplugin-auto-import": "^0.11.2",
 		"unplugin-vue-components": "^0.22.4",
